Fix scrollbars in home page

--- a/source/css/home.sass
+++ b/source/css/home.sass
@@ -2,6 +2,7 @@
 
 body
     border-top: #fc9e4f 4px solid
+    min-height: calc(100vh - 4px)
 
 .page-container
     background-repeat: no-repeat
